Fix for mobile menu dropdowns being white instead on black when dark mode is not enabled.

--- a/css/style.css
+++ b/css/style.css
@@ -456,6 +456,9 @@ label[for="themeSwitch"] {
         padding-left: 6px;
         color: rgba(255,255,255,.75);
     }
+    header .dropdown-menu {
+        background: var(--primary-dark-mode);
+    }
 }
 
 @keyframes bounceSideways {
